--- a/examples/seedwandb/dkt.yaml
+++ b/examples/seedwandb/dkt.yaml
@@ -1,5 +1,5 @@
 program: wandb_dkt_train.py
-method: grid
+method: bayes
 metric:
     goal: maximize
     name: validauc
@@ -19,6 +19,6 @@ parameters:
     dropout:
         values: [0.05,0.1,0.3,0.5]
     seed:
-        values: [42, 3407]
+        values: [42]
     fold:
         values: [0, 1, 2, 3, 4]
